# mydron-cli

./: .gitignore  README.md  pyproject.toml
boards/speedybee-f405-v4/: README.md  health-profile.json
docs/: COMO_FUNCIONA.md  CREAR_CLIS_WINDOWS.md  INAV_CLI_COMMANDS.md
skills/codex-mydron-inav/: SKILL.md
skills/codex-mydron-inav/agents/: openai.yaml
skills/codex-mydron-inav/references/: safety.md  system-facts.md  workflows.md
skills/mydron-inav/: SKILL.md
skills/mydron-inav/agents/: openai.yaml
skills/mydron-inav/references/: commands.md  system-facts.md
skills/mydron-inav/references/boards/: README.md  speedybee-f405-v4.md
src/mydron/: __init__.py  cli.py  health.py  inav.py  msp.py  safety.py  serial_port.py
tests/: test_health.py  test_msp.py
