[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mydron-cli"
version = "0.1.0"
description = "CLI local para comunicacion segura con controladoras INAV por USB/MSP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
mydron = "mydron.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
